# broken-flask

./: .gitignore  README.md  pyproject.toml
broken-flask/: comp0034-cw2-i-RafiRees.code-workspace  main.py  requirements.txt
broken-flask/instance/: database.db
broken-flask/website/: __init__.py  application.py  auth.py  models.py  views.py
broken-flask/website/dash_app/: dashboard.py
broken-flask/website/templates/: home.html
