[tool.poetry]
name = "broken-flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "broken_flask"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
openpyxl = "^3.1.2"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"
flask-wtf = "^1.1.1"
dash = "^2.9.1"
dash-bootstrap-components = "^1.4.1"
plotly = "^5.13.1"
datapackage = "^1.15.2"
flask-login = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
